--- a/templates/campaign/index.html.twig
+++ b/templates/campaign/index.html.twig
@@ -19,6 +19,18 @@
 						<a href="{{ path(name = 'app_campaign_new') }}" class="waves-effect waves-light btn pink lighten-1">Créer une campagne</a>
 					</li>
 				</ul>
+
+				<ul class="right hide-on-med-and-down">
+					<li>
+						<a href="{{ path(name = 'app_logout') }}" class="waves-effect waves-light btn blue lighten-1">Logout</a>
+					</li>
+				</ul>
+
+				<ul id="nav-mobile" class="sidenav">
+					<li>
+						<a href="{{ path(name = 'app_logout') }}" class="waves-effect waves-light btn blue lighten-1">Logout</a>
+					</li>
+				</ul>
 				<a href="#" data-target="nav-mobile" class="sidenav-trigger">
 					<i class="material-icons">menu</i>
 				</a>
@@ -194,8 +206,8 @@
 		</div>
 		<div class="footer-copyright">
 			<div class="container">
-				Made with love by
-				<a class="white-text" href="http://trombi.simplon-roanne.com/">Simplon Roanne</a>
+				fait par Yanis
+				<a class="white-text" href="http://trombi.simplon-roanne.com/">Simplon Saint-Etienne</a>
 			</div>
 		</div>
 	</footer>
