--- a/templates/campaign/new.html.twig
+++ b/templates/campaign/new.html.twig
@@ -23,6 +23,18 @@
 						<a href="{{ path(name = 'app_campaign_new') }}" class="waves-effect waves-light btn pink lighten-1">Créer une campagne</a>
 					</li>
 				</ul>
+
+				<ul class="right hide-on-med-and-down">
+					<li>
+						<a href="{{ path(name = 'app_logout') }}" class="waves-effect waves-light btn blue lighten-1">Logout</a>
+					</li>
+				</ul>
+
+				<ul id="nav-mobile" class="sidenav">
+					<li>
+						<a href="{{ path(name = 'app_logout') }}" class="waves-effect waves-light btn blue lighten-1">Logout</a>
+					</li>
+				</ul>
 				<a href="#" data-target="nav-mobile" class="sidenav-trigger">
 					<i class="material-icons">menu</i>
 				</a>
@@ -58,7 +70,7 @@
 				</div>
 			</div>
 
-<!--   Section Form   -->
+			<!--   Section Form   -->
 			<div class="card">
 				<div class="card-content">
 					<div class="row">
@@ -75,13 +87,13 @@
 							{{ form_errors(form.name) }}
 						</div>
 
-						<div class="input-field col s12 l6">
-							{# {{ form_widget(form.email, {
-                    'attr': {
-                        'class': 'validate',}
-                         }) }}
-							{{ form_label(form.email) }}
-							{{ form_errors(form.email) }} #}
+						<div
+							class="input-field col s12 l6">{# {{ form_widget(form.email, {
+								                    'attr': {
+								                        'class': 'validate',}
+								                         }) }}
+															{{ form_label(form.email) }}
+															{{ form_errors(form.email) }} #}
 						</div>
 
 						<div class="input-field col s12 l8">
@@ -180,7 +192,7 @@
 					<a class="white-text" href="#!">Comment ça marche ?</a>
 				</li>
 				<li>
-					<a class="white-text" href="#!">Voir les campagnes</a>
+					<a class="white-text" href="{{ path(name = 'app_campaign_index') }}">Voir les campagnes</a>
 				</li>
 				<li>
 					<a class="white-text" href="{{ path(name = 'app_campaign_new') }}">Créer une campagne</a>
@@ -191,7 +203,7 @@
 </div>
 <div class="footer-copyright">
 	<div class="container">
-		Made with love by
-		<a class="white-text" href="http://trombi.simplon-roanne.com/">Simplon Roanne</a>
+		fait par Yanis
+		<a class="white-text" href="http://trombi.simplon-roanne.com/">Simplon Saint-Etienne</a>
 	</div>
 </div></footer><!--JavaScript at end of body for optimized loading--><script type="text/javascript" src="{{ asset('js/materialize.min.js') }}"></script><!--Init & custom scripts--><script type="text/javascript" src="{{ asset('js/scripts.js') }}"></script>{% endblock %}
