--- a/templates/campaign/show.html.twig
+++ b/templates/campaign/show.html.twig
@@ -7,7 +7,7 @@
 	<div class="navbar-fixed">
 		<nav class="white">
 			<div class="nav-wrapper">
-				<a href="/" class="brand-logo center"></a>
+				<a href="/" class="brand-logo center">Cagnot'Potes</a>
 				<ul class="right hide-on-med-and-down">
 					<li>
 						<a href="{{ path(name = 'app_campaign_new') }}" class="waves-effect waves-light btn pink lighten-1">Créer une campagne</a>
@@ -15,9 +15,20 @@
 				</ul>
 
 				<ul id="nav-mobile" class="sidenav">
-
 					<li>
 						<a href="{{ path(name = 'app_campaign_new') }}" class="waves-effect waves-light btn pink lighten-1">Créer une campagne</a>
+					</li>
+				</ul>
+
+				<ul class="right hide-on-med-and-down">
+					<li>
+						<a href="{{ path(name = 'app_logout') }}" class="waves-effect waves-light btn blue lighten-1">Logout</a>
+					</li>
+				</ul>
+
+				<ul id="nav-mobile" class="sidenav">
+					<li>
+						<a href="{{ path(name = 'app_logout') }}" class="waves-effect waves-light btn blue lighten-1">Logout</a>
 					</li>
 				</ul>
 				<a href="#" data-target="nav-mobile" class="sidenav-trigger">
@@ -116,19 +127,15 @@
 				<textarea id="description" class="materialize-textarea" readonly="readonly">{{ campaign.content }}</textarea>
 			</div>
 			<div class="input-field col s12 l6">
-				<input id="goal" type="number" readonly="readonly" value="500">
-				<label for="goal">{{ campaign.content }}</label>
+				<label for="goal">Goal</label>
+				<input id="goal" type="number" readonly="readonly" value="{{ campaign.goal }}">
 			</div>
-			<div class="col s12 l6 offset-l3">
-				<button class="btn btn-large waves-effect waves-light col s12" type="submit" name="action">
-					Modifiez la campagne
-					<i class="material-icons right">edit</i>
-				</button>
-			</div>
+			
 		</form>
 	</div>
 	<!-- List -->
 	<div class="row">
+	{# {{ app.user.email }} #}
     <div class="col s12 center">
         <h4>Top 3 des plus gros donateurs</h4>
     </div>
@@ -144,7 +151,7 @@
             <tbody>
                 {% for participation in top_donors %}
                     <tr>
-                        <td>{{ participation.email }}</td>
+                        <td>{{ participation.user.email }}</td>
                         <td>{{ participation.payment.amount|number_format(2, ',', ' ') }} €</td>
                     </tr>
                 {% else %}
@@ -189,7 +196,7 @@
 </div>
 <div class="footer-copyright">
 	<div class="container">
-		Made with love by
-		<a class="white-text" href="http://trombi.simplon-roanne.com/">Simplon Roanne</a>
-	</div>
+				fait par Yanis
+				<a class="white-text" href="http://trombi.simplon-roanne.com/">Simplon Saint-Etienne</a>
+			</div>
 </div></footer><!--JavaScript at end of body for optimized loading--><script type="text/javascript" src=" {{ asset('js/materialize.min.js') }}"></script><!--Init & custom scripts--><script type="text/javascript" src="{{ asset('js/scripts.js') }}"></script>{% endblock %}
