--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,6 +24,44 @@
 		{% endblock %}
 	</head>
 	<body>
+		{% block header %}
+			<header class="navbar-fixed">
+				<nav class="white">
+					<div class="nav-wrapper">
+						<a href="/" class="brand-logo center">Cagnot'Potes</a>
+						<ul class="right hide-on-med-and-down">
+							<li>
+								<a href="{{ path(name = 'app_campaign_new') }}" class="waves-effect waves-light btn pink lighten-1">Créer une campagne</a>
+							</li>
+						</ul>
+
+						<ul id="nav-mobile" class="sidenav">
+							<li>
+								<a href="{{ path(name = 'app_campaign_new') }}" class="waves-effect waves-light btn pink lighten-1">Créer une campagne</a>
+							</li>
+						</ul>
+
+						{% if app.user %}
+
+							<ul class="right hide-on-med-and-down">
+								<li>
+									<a href="{{ path(name = 'app_logout') }}" class="waves-effect waves-light btn blue lighten-1">Logout</a>
+								</li>
+							</ul>
+						{% endif %}
+
+						<ul id="nav-mobile" class="sidenav">
+							<li>
+								<a href="{{ path(name = 'app_logout') }}" class="waves-effect waves-light btn blue lighten-1">Logout</a>
+							</li>
+						</ul>
+						<a href="#" data-target="nav-mobile" class="sidenav-trigger">
+							<i class="material-icons">menu</i>
+						</a>
+					</div>
+				</nav>
+			</header>
+		{% endblock %}
 		{% block body %}{% endblock %}
 	</body>
 
