--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -76,6 +76,8 @@
     </style>
 {% endblock %}
 
+{% block header %}{% endblock %}
+
 {% block body %}
 <div class="container">
     <div class="row">
